# digitization_progress_reports

./: .env.example  Makefile  README.rst  docker-compose.yaml  pyproject.toml  script.py
app/: .gitignore  Dockerfile  pyproject.toml  script.py
digitization_progress_reports/: Dockerfile  __init__.py  run.py
digitization_progress_reports/application/: __init__.py
digitization_progress_reports/application/functions/: calculation_funcs.py  cleaning_funcs.py
digitization_progress_reports/functions/: cleaning_funcs.py  plotting_funcs.py
functions/: calculation_funcs.py  cleaning_funcs.py  plotting_funcs.py
input/: TPT Digi Numbers Reported - Year3 AugOct21.csv  input_template.csv
