[tool.poetry]
name = "digitization-progress-reports"
version = "0.1.0"
description = ""
authors = ["Nicolas J. Dowdy <njdowdy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
